--- a/app/src/main/res/menu/drawer_menu.xml
+++ b/app/src/main/res/menu/drawer_menu.xml
@@ -13,7 +13,7 @@
         <item
             android:id="@+id/nav_cabecera"
             android:icon="@drawable/ic_test"
-            android:title="@string/caracteristicasGenerales" />
+            android:title="@string/datosPersonaje" />
 
         <item
             android:id="@+id/nav_puntosHabilidad"
