--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -14,7 +14,7 @@
         <item name="android:textColorHint">@color/colorPrimary</item>
         <item name="android:autofilledHighlight">@android:color/transparent</item>
 
-        <item name="android:statusBarColor">@android:color/transparent</item>
+        <item name="android:statusBarColor">@android:color/black</item>
     </style>
 
 </resources>
