--- a/app/src/main/res/menu/drawer_menu.xml
+++ b/app/src/main/res/menu/drawer_menu.xml
@@ -78,10 +78,13 @@
                 android:icon="@drawable/ic_salir_personaje"
                 android:title="@string/salirPersonaje" />
 
-            <item
-                android:id="@+id/nav_politicasCondiciones"
-                android:icon="@drawable/ic_lopd"
-                android:title="@string/politicasCondiciones"/>
+
+            <group android:checkableBehavior="single">
+                <item
+                    android:id="@+id/nav_configuracion"
+                    android:icon="@drawable/ic_conf"
+                    android:title="@string/configuracion"/>
+            </group>
 
             <item
                 android:id="@+id/nav_logout"
@@ -93,3 +96,4 @@
     </item>
 
 </menu>
+
