--- a/app/src/main/res/layout/fragment_habilidades_bonificadores.xml
+++ b/app/src/main/res/layout/fragment_habilidades_bonificadores.xml
@@ -28,7 +28,7 @@
         <ImageView
             android:id="@+id/HabilidadesBonificadores_MarcoInspiracion"
             android:contentDescription="@string/inspiracion"
-            android:layout_width="wrap_content"
+            android:layout_width="200dp"
             android:layout_height="100dp"
             app:srcCompat="@drawable/ic_marco2"
             android:layout_below="@+id/HabilidadesBonificadores_titulo"
@@ -45,7 +45,25 @@
             android:layout_alignStart="@+id/HabilidadesBonificadores_MarcoInspiracion"
             android:layout_alignBottom="@+id/HabilidadesBonificadores_MarcoInspiracion"
             android:layout_marginBottom="38dp"
-            android:layout_marginStart="80dp"/>
+            android:layout_marginStart="55dp"/>
+
+        <Button
+            android:id="@+id/HabilidadesBonificadores_botonRestarInspiracion"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/simboloSumar"
+            android:layout_toEndOf="@+id/HabilidadesBonificadores_MarcoInspiracion"
+            android:layout_above="@+id/HabilidadesBonificadores_botonSumarInspiracion"
+            android:layout_marginStart="15dp"/>
+
+        <Button
+            android:id="@+id/HabilidadesBonificadores_botonSumarInspiracion"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/simboloRestar"
+            android:layout_toEndOf="@+id/HabilidadesBonificadores_MarcoInspiracion"
+            android:layout_alignBottom="@+id/HabilidadesBonificadores_MarcoInspiracion"
+            android:layout_marginStart="15dp"/>
 
         <ImageView
             android:id="@+id/HabilidadesBonificadores_Marco_inspiracion"
@@ -71,12 +89,30 @@
         <ImageView
             android:id="@+id/HabilidadesBonificadores_MarcoBonificadorCompetencia"
             android:contentDescription="@string/inspiracion"
-            android:layout_width="wrap_content"
+            android:layout_width="200dp"
             android:layout_height="100dp"
             app:srcCompat="@drawable/ic_marco2"
             android:layout_below="@+id/HabilidadesBonificadores_Marco_inspiracion"
             android:layout_marginTop="40dp"
             android:layout_marginStart="100dp"/>
+
+        <Button
+            android:id="@+id/HabilidadesBonificadores_botonRestarBonificadorCompetencia"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/simboloSumar"
+            android:layout_toEndOf="@+id/HabilidadesBonificadores_MarcoBonificadorCompetencia"
+            android:layout_above="@+id/HabilidadesBonificadores_botonSumarBonificadorCompetencia"
+            android:layout_marginStart="15dp"/>
+
+        <Button
+            android:id="@+id/HabilidadesBonificadores_botonSumarBonificadorCompetencia"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/simboloRestar"
+            android:layout_toEndOf="@+id/HabilidadesBonificadores_MarcoBonificadorCompetencia"
+            android:layout_alignBottom="@+id/HabilidadesBonificadores_MarcoBonificadorCompetencia"
+            android:layout_marginStart="15dp"/>
 
         <ImageView
             android:id="@+id/HabilidadesBonificadores_Marco_BonificadorCompetencia"
@@ -109,7 +145,7 @@
             android:layout_alignStart="@+id/HabilidadesBonificadores_MarcoBonificadorCompetencia"
             android:layout_alignBottom="@+id/HabilidadesBonificadores_MarcoBonificadorCompetencia"
             android:layout_marginBottom="30dp"
-            android:layout_marginStart="65dp"
+            android:layout_marginStart="42dp"
             android:layout_marginEnd="5dp"
             android:gravity="center_horizontal"/>
 
@@ -826,12 +862,30 @@
         <ImageView
             android:id="@+id/HabilidadesBonificadores_MarcoSabiduriaPercepcionPasiva"
             android:contentDescription="@string/inspiracion"
-            android:layout_width="wrap_content"
+            android:layout_width="200dp"
             android:layout_height="100dp"
             app:srcCompat="@drawable/ic_marco2"
             android:layout_below="@+id/HabilidadesBonificadores_texto_tratoAnimales"
             android:layout_marginTop="40dp"
             android:layout_marginStart="100dp"/>
+
+        <Button
+            android:id="@+id/HabilidadesBonificadores_botonRestarBonificadorSabiduriaPercepcionPasiva"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/simboloSumar"
+            android:layout_toEndOf="@+id/HabilidadesBonificadores_MarcoSabiduriaPercepcionPasiva"
+            android:layout_above="@+id/HabilidadesBonificadores_botonSumarSabiduriaPercepcionPasiva"
+            android:layout_marginStart="15dp"/>
+
+        <Button
+            android:id="@+id/HabilidadesBonificadores_botonSumarSabiduriaPercepcionPasiva"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/simboloRestar"
+            android:layout_toEndOf="@+id/HabilidadesBonificadores_MarcoSabiduriaPercepcionPasiva"
+            android:layout_alignBottom="@+id/HabilidadesBonificadores_MarcoSabiduriaPercepcionPasiva"
+            android:layout_marginStart="15dp"/>
 
         <TextView
             android:id="@+id/HabilidadesBonificadores_texto_sabiduriaPercepcionPasiva"
@@ -839,11 +893,11 @@
             android:layout_height="wrap_content"
             android:text="@string/sabiduriaPercepcionPasiva"
             android:textColor="@color/colorPrimary"
-            android:textSize="16sp"
+            android:textSize="14sp"
             android:layout_alignStart="@+id/HabilidadesBonificadores_Marco_sabiduriaPercepcionPasiva"
             android:layout_alignBottom="@+id/HabilidadesBonificadores_Marco_sabiduriaPercepcionPasiva"
             android:layout_marginBottom="32dp"
-            android:layout_marginStart="147dp"
+            android:layout_marginStart="125dp"
             android:gravity="center_horizontal"/>
 
         <ImageView
