--- a/app/src/main/res/layout/fragment_puntos_habilidad.xml
+++ b/app/src/main/res/layout/fragment_puntos_habilidad.xml
@@ -83,7 +83,8 @@
             android:backgroundTint="@color/colorPrimary"
             android:layout_toEndOf="@+id/puntosHabilidadFragment_Marco1"
             android:layout_alignBottom="@+id/puntosHabilidadFragment_Marco1"
-            android:layout_marginStart="20dp"/>
+            android:layout_marginStart="20dp"
+            android:contentDescription="@string/lanzarDados" />
 
         <ImageButton
             android:id="@+id/puntosHabilidadFragment_boton_editar1"
@@ -93,7 +94,8 @@
             android:backgroundTint="@color/colorPrimary"
             android:layout_toEndOf="@+id/puntosHabilidadFragment_boton_reroll1"
             android:layout_alignBottom="@+id/puntosHabilidadFragment_Marco1"
-            android:layout_marginStart="20dp"/>
+            android:layout_marginStart="20dp"
+            android:contentDescription="@string/editar" />
 
         <ImageView
             android:id="@+id/puntosHabilidadFragment_Marco2"
@@ -153,7 +155,8 @@
             android:backgroundTint="@color/colorPrimary"
             android:layout_toEndOf="@+id/puntosHabilidadFragment_Marco2"
             android:layout_alignBottom="@+id/puntosHabilidadFragment_Marco2"
-            android:layout_marginStart="20dp"/>
+            android:layout_marginStart="20dp"
+            android:contentDescription="@string/lanzarDados" />
 
         <ImageButton
             android:id="@+id/puntosHabilidadFragment_boton_editar2"
@@ -163,7 +166,8 @@
             android:backgroundTint="@color/colorPrimary"
             android:layout_toEndOf="@+id/puntosHabilidadFragment_boton_reroll2"
             android:layout_alignBottom="@+id/puntosHabilidadFragment_Marco2"
-            android:layout_marginStart="20dp"/>
+            android:layout_marginStart="20dp"
+            android:contentDescription="@string/editar" />
 
         <ImageView
             android:id="@+id/puntosHabilidadFragment_Marco3"
@@ -223,7 +227,8 @@
             android:backgroundTint="@color/colorPrimary"
             android:layout_toEndOf="@+id/puntosHabilidadFragment_Marco3"
             android:layout_alignBottom="@+id/puntosHabilidadFragment_Marco3"
-            android:layout_marginStart="20dp"/>
+            android:layout_marginStart="20dp"
+            android:contentDescription="@string/lanzarDados" />
 
         <ImageButton
             android:id="@+id/puntosHabilidadFragment_boton_editar3"
@@ -233,7 +238,8 @@
             android:backgroundTint="@color/colorPrimary"
             android:layout_toEndOf="@+id/puntosHabilidadFragment_boton_reroll3"
             android:layout_alignBottom="@+id/puntosHabilidadFragment_Marco3"
-            android:layout_marginStart="20dp"/>
+            android:layout_marginStart="20dp"
+            android:contentDescription="@string/editar" />
 
         <ImageView
             android:id="@+id/puntosHabilidadFragment_Marco4"
@@ -293,7 +299,8 @@
             android:backgroundTint="@color/colorPrimary"
             android:layout_toEndOf="@+id/puntosHabilidadFragment_Marco4"
             android:layout_alignBottom="@+id/puntosHabilidadFragment_Marco4"
-            android:layout_marginStart="20dp"/>
+            android:layout_marginStart="20dp"
+            android:contentDescription="@string/lanzarDados" />
 
         <ImageButton
             android:id="@+id/puntosHabilidadFragment_boton_editar4"
@@ -303,7 +310,8 @@
             android:backgroundTint="@color/colorPrimary"
             android:layout_toEndOf="@+id/puntosHabilidadFragment_boton_reroll4"
             android:layout_alignBottom="@+id/puntosHabilidadFragment_Marco4"
-            android:layout_marginStart="20dp"/>
+            android:layout_marginStart="20dp"
+            android:contentDescription="@string/editar" />
 
         <ImageView
             android:id="@+id/puntosHabilidadFragment_Marco5"
@@ -363,7 +371,8 @@
             android:backgroundTint="@color/colorPrimary"
             android:layout_toEndOf="@+id/puntosHabilidadFragment_Marco5"
             android:layout_alignBottom="@+id/puntosHabilidadFragment_Marco5"
-            android:layout_marginStart="20dp"/>
+            android:layout_marginStart="20dp"
+            android:contentDescription="@string/lanzarDados" />
 
         <ImageButton
             android:id="@+id/puntosHabilidadFragment_boton_editar5"
@@ -373,7 +382,8 @@
             android:backgroundTint="@color/colorPrimary"
             android:layout_toEndOf="@+id/puntosHabilidadFragment_boton_reroll5"
             android:layout_alignBottom="@+id/puntosHabilidadFragment_Marco5"
-            android:layout_marginStart="20dp"/>
+            android:layout_marginStart="20dp"
+            android:contentDescription="@string/editar" />
 
         <ImageView
             android:id="@+id/puntosHabilidadFragment_Marco6"
@@ -433,7 +443,8 @@
             android:backgroundTint="@color/colorPrimary"
             android:layout_toEndOf="@+id/puntosHabilidadFragment_Marco6"
             android:layout_alignBottom="@+id/puntosHabilidadFragment_Marco6"
-            android:layout_marginStart="20dp"/>
+            android:layout_marginStart="20dp"
+            android:contentDescription="@string/lanzarDados" />
 
         <ImageButton
             android:id="@+id/puntosHabilidadFragment_boton_editar6"
@@ -443,7 +454,8 @@
             android:backgroundTint="@color/colorPrimary"
             android:layout_toEndOf="@+id/puntosHabilidadFragment_boton_reroll6"
             android:layout_alignBottom="@+id/puntosHabilidadFragment_Marco6"
-            android:layout_marginStart="20dp"/>
+            android:layout_marginStart="20dp"
+            android:contentDescription="@string/editar" />
 
     </RelativeLayout>
 
