--- a/app/src/main/res/layout/fragment_equipo.xml
+++ b/app/src/main/res/layout/fragment_equipo.xml
@@ -47,6 +47,7 @@
             android:textColor="@android:color/black"/>
 
         <TextView
+            android:id="@+id/Equipo_moneda_cobre"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="10"
@@ -78,6 +79,7 @@
             android:textColor="@android:color/black"/>
 
         <TextView
+            android:id="@+id/Equipo_moneda_plata"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="10"
@@ -108,6 +110,7 @@
             android:textColor="@android:color/black"/>
 
         <TextView
+            android:id="@+id/Equipo_moneda_esmeralda"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="10"
@@ -139,6 +142,7 @@
             android:textColor="@android:color/black"/>
 
         <TextView
+            android:id="@+id/Equipo_moneda_oro"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="10"
@@ -178,6 +182,7 @@
             android:textColor="@android:color/black"/>
 
         <TextView
+            android:id="@+id/Equipo_moneda_platino"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="10"
