--- a/app/src/main/res/layout/activity_menu_personajes.xml
+++ b/app/src/main/res/layout/activity_menu_personajes.xml
@@ -1,18 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="fill_parent"
-    android:layout_height="wrap_content"
-    android:fillViewport="false"
-    android:orientation="vertical">
-
-    <RelativeLayout
-        android:id="@+id/MenuPersonajes_layoutBase"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="@color/colorPrimaryDark"
-        android:orientation="vertical"
-        android:padding="30dp">
+<RelativeLayout android:id="@+id/MenuPersonajes_layoutBase"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:background="@color/colorPrimaryDark"
+    android:orientation="vertical"
+    android:padding="20dp"
+    xmlns:android="http://schemas.android.com/apk/res/android">
 
         <TextView
             android:id="@+id/MenuPersonajes_titulo"
@@ -42,4 +35,3 @@
 
     </RelativeLayout>
 
-</ScrollView>
