Comentarios y limpieza de código. Warnings de XML eliminados (algunos). Warnings de Java eliminados (algunos). Cambiados EditText por TextView de HabilidadesBonificadores.

--- a/app/src/main/res/layout/fragment_equipo.xml
+++ b/app/src/main/res/layout/fragment_equipo.xml
@@ -50,7 +50,7 @@
             android:id="@+id/Equipo_moneda_cobre"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="10"
+            android:text=""
             android:layout_alignBottom="@id/Equipo_Marco_moneda_cobre"
             android:layout_marginBottom="25dp"
             android:layout_marginStart="22dp"
@@ -82,7 +82,7 @@
             android:id="@+id/Equipo_moneda_plata"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="10"
+            android:text=""
             android:layout_alignBottom="@id/Equipo_Marco_moneda_plata"
             android:layout_marginBottom="25dp"
             android:layout_marginStart="203dp"
@@ -113,7 +113,7 @@
             android:id="@+id/Equipo_moneda_esmeralda"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="10"
+            android:text=""
             android:layout_alignBottom="@id/Equipo_Marco_moneda_esmeralda"
             android:layout_marginBottom="25dp"
             android:layout_marginStart="22dp"
@@ -145,7 +145,7 @@
             android:id="@+id/Equipo_moneda_oro"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="10"
+            android:text=""
             android:layout_alignBottom="@id/Equipo_Marco_moneda_oro"
             android:layout_marginBottom="25dp"
             android:layout_marginStart="203dp"
@@ -185,7 +185,7 @@
             android:id="@+id/Equipo_moneda_platino"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="10"
+            android:text=""
             android:layout_alignBottom="@id/Equipo_Marco_moneda_platino"
             android:layout_marginBottom="25dp"
             android:layout_marginStart="113dp"
