--- a/app/src/main/res/layout/fragment_competencias_idiomas.xml
+++ b/app/src/main/res/layout/fragment_competencias_idiomas.xml
@@ -105,7 +105,7 @@
             android:layout_height="wrap_content"
             android:layout_below="@+id/HabilidadesBonificadores_botonRestarArmadura"
             android:paddingTop="20dp"
-            android:text="@string/armas"
+            android:text="@string/armasDosPuntos"
             android:textColor="@color/colorPrimary"
             android:textSize="20sp" />
 
@@ -143,7 +143,7 @@
             android:layout_height="wrap_content"
             android:layout_below="@+id/HabilidadesBonificadores_botonRestarArmas"
             android:paddingTop="20dp"
-            android:text="@string/herramientas"
+            android:text="@string/herramientasDosPuntos"
             android:textColor="@color/colorPrimary"
             android:textSize="20sp" />
 
