--- a/app/src/main/res/layout/fragment_equipo.xml
+++ b/app/src/main/res/layout/fragment_equipo.xml
@@ -38,7 +38,7 @@
             android:id="@+id/Equipo_texto_moneda_cobre"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/piezasCobre"
+            android:text="@string/piezasCobreConSalto"
             android:layout_alignBottom="@id/Equipo_Marco_moneda_cobre"
             android:layout_marginBottom="20dp"
             android:layout_marginStart="85dp"
@@ -70,7 +70,7 @@
             android:id="@+id/Equipo_texto_moneda_plata"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/piezasPlata"
+            android:text="@string/piezasPlataConSalto"
             android:layout_alignBottom="@id/Equipo_Marco_moneda_plata"
             android:layout_marginBottom="20dp"
             android:layout_marginStart="266dp"
@@ -101,7 +101,7 @@
             android:id="@+id/Equipo_texto_moneda_esmeralda"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/piezasEsmeralda"
+            android:text="@string/piezasEsmeraldaConSalto"
             android:layout_alignBottom="@id/Equipo_Marco_moneda_esmeralda"
             android:layout_marginBottom="20dp"
             android:layout_marginStart="70dp"
@@ -133,7 +133,7 @@
             android:id="@+id/Equipo_texto_moneda_oro"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/piezasOro"
+            android:text="@string/piezasOroConSalto"
             android:layout_alignBottom="@id/Equipo_Marco_moneda_oro"
             android:layout_marginBottom="20dp"
             android:layout_marginStart="270dp"
@@ -173,7 +173,7 @@
             android:id="@+id/Equipo_texto_moneda_platino"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/piezasPlatino"
+            android:text="@string/piezasPlatinoConSalto"
             android:layout_alignBottom="@id/Equipo_Marco_moneda_platino"
             android:layout_marginBottom="20dp"
             android:layout_marginStart="168dp"
